--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 path = "src/main.rs"
 name = "wurdle"
 [dependencies]
+rand = "0.8.5"
 
 [dev-dependencies]
 tempdir = "0.3.7"
