--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,14 @@ name = "wurdle-horror"
 
 
 [[bin]]
+path = "src/opener.rs"
+name = "wurdle-opener"
+
+[[bin]]
+path = "src/loop.rs"
+name = "wurdle-loop"
+
+[[bin]]
 path = "src/cheater.rs"
 name = "wurdle-cheater"
 [dependencies]
